# src/main/java/se/digg/wallet/gateway/application/controller/AccountController.java
@@ -13,15 +13,11 @@ import se.digg.wallet.gateway.api.v0.AccountApi;
 import se.digg.wallet.gateway.api.v0.model.CreateAccountRequest;
 import se.digg.wallet.gateway.api.v0.model.CreateAccountResponse;
 import se.digg.wallet.gateway.api.v0.model.EcJwkRequest;
-import se.digg.wallet.gateway.api.v0.model.SecurityEnvelopeRequest;
-import se.digg.wallet.gateway.api.v0.model.SecurityEnvelopesResponse;
 import se.digg.wallet.gateway.application.auth.CurrentAccount;
 import se.digg.wallet.gateway.application.mapper.account.AccountMapper;
 import se.digg.wallet.gateway.domain.model.account.Account;
 import se.digg.wallet.gateway.domain.model.account.Jwk;
 import se.digg.wallet.gateway.domain.model.account.NewAccount;
-import se.digg.wallet.gateway.domain.model.account.SecurityEnvelope;
-import se.digg.wallet.gateway.domain.model.account.SecurityEnvelopes;
 import se.digg.wallet.gateway.domain.service.account.AccountService;
 
 @RestController
@@ -48,26 +44,6 @@ public class AccountController implements AccountApi {
     return ResponseEntity
         .status(HttpStatus.CREATED)
         .body(createAccountResponse);
-  }
-
-  @Override
-  public ResponseEntity<SecurityEnvelopesResponse> getAccountSecurityEnvelopes() {
-    var accountId = currentAccount.id();
-    SecurityEnvelopes envelopes = accountService.getSecurityEnvelopes(accountId);
-    return ResponseEntity.ok(mapper.toResponse(envelopes));
-  }
-
-  @Override
-  public ResponseEntity<Void> addAccountSecurityEnvelope(
-      @Valid SecurityEnvelopeRequest securityEnvelopeRequest) {
-    var accountId = currentAccount.id();
-    SecurityEnvelope envelope = mapper.toDomain(securityEnvelopeRequest);
-    accountService.addAccountSecurityEnvelope(envelope, accountId);
-
-    return ResponseEntity
-        .status(HttpStatus.CREATED)
-        .build();
-
   }
 
   @Override
